refactor WishlistService.java